Dockerized and Post with refresh can be seen